Added route for GETting the RO's content
